

import Foundation

let currencyDictionary: [String:String] = [
    "AUD":"Австралийский доллар",
    "AZN":"Азербайджанский манат",
    "BYN":"Белорусский рубль",
    "CAD":"Канадский доллар",
    "CHF":"Швейцарский франк",
    "CNY":"Китайский Юань",
    "CZK":"Чешская крона",
    "DKK":"Датская крона",
    "EUR":"Евро",
    "GBP":"Англия, фунт стерлингов",
    "GEL":"Грузинский лари",
    "HUF":"Венгерский форинт",
    "ILS":"Израиль, шекель",
    "JPY":"Япония, иена",
    "KZT":"Казахстанский тенге",
    "MDL":"Молдавский лей",
    "NOK":"Норвежская крона",
    "PLN":"Польский злотый",
    "SEK":"Шведская крона",
    "SGD":"Сингапурский доллар",
    "TMT":"Туркменский манат",
    "TRY":"Турецкая лира",
    "UAH":"Украинская гривна",
    "USD":"Американский доллар",
    "UZS":"Узбекский сум",
    "XAU":"Золото"
]
